--- a/readme
+++ b/readme
@@ -1,2 +1,2 @@
-Questo programma è scritto puramente in Swift e utilizza una matrice bidimensionale assieme  al prompt per permettere a due persone di giocare a scacchi.
-Questo funziona andando ad inserire le coordinate in cui si vuole muovere lo scacco e il programma aggiornerà in tempo reale la scacchiera printata a schermo.
+This is a command line tool (Swift) which print a matrix used as a chess.
+It ask to two users their moves and print the results (as shown below).
